now mul a1 * 164 works okay

--- a/ipython_fixbv/fixbv.ipynb
+++ b/ipython_fixbv/fixbv.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a24d29dbb38c79486a719edb777da27d6ad90f4da36574ec629467b312949c2e"
+  "signature": "sha256:85b6a2831f974f8128fe5234deb51e16d3bf46b9d8b74ef78726453eb6a7e638"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -67,11 +67,13 @@
       "a2 = fixbv(-0.05298011854, min=-1, max=1, res=1e-5)\n",
       "a3 = fixbv(0.8829110762, min=-1, max=1, res=1e-5)\n",
       "a4 = fixbv(0.4435068522, min=-1,max=1, res=1e-5)\n",
-      "t = fixbv(0, min=-20,max=20, res=1e-5)\n",
-      "print bin(a1),bin(a2),bin(a3),bin(a4)\n",
-      "print repr(a1),repr(a2),repr(a3),repr(a4)\n",
-      "#t = a1 * 164\n",
-      "print repr(t)"
+      "t = fixbv(164, min=-200,max=200, res=1e-5)\n",
+      "result = fixbv(0, min=-400,max=400, res=1e-5)\n",
+      "print bin(a1),bin(a2),bin(a3),bin(a4),bin(t)\n",
+      "print repr(a1),repr(a2),repr(a3),repr(a4),repr(t)\n",
+      "result = a1 * t\n",
+      "print 'a1 * t ', repr(result)\n",
+      "print repr(result)"
      ],
      "language": "python",
      "metadata": {},
@@ -80,13 +82,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1001101001111100110 10010011011111 11100010000001100 1110001100010011\n",
-        "fixbv(-1.586136,  format=(21,3,17), ) fixbv(-0.052986,  format=(18,0,17), ) fixbv(0.882904,  format=(18,0,17), ) fixbv(0.443504,  format=(18,0,17), )\n",
-        "fixbv(0.000000,  format=(23,5,17), )\n"
+        "1001101001111100110 10010011011111 11100010000001100 1110001100010011 1010010000000000000000000\n",
+        "fixbv(-1.586136,  format=(21,3,17), ) fixbv(-0.052986,  format=(18,0,17), ) fixbv(0.882904,  format=(18,0,17), ) fixbv(0.443504,  format=(18,0,17), ) fixbv(164.000000,  format=(26,8,17), )\n",
+        "('  %8d : calc_*_res ', 0, -1, 1, 0.5)\n",
+        "a1 * t  fixbv(-260.126282,  format=(47,12,34), )\n",
+        "fixbv(-260.126282,  format=(47,12,34), )\n"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
