fixed the errors with vcd from myhdl_tools.

--- a/ipython_fixbv/fixbv.ipynb
+++ b/ipython_fixbv/fixbv.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:52f924462c7a143c1107152c4ddcea8a8177e280b910981faf7d293465325964"
+  "signature": "sha256:13fdd8f968ea98d41a0ac31e5df77dd5528866a372255b135178e2601b2090dc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,19 +23,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "ImportError",
-       "evalue": "cannot import name vcd",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-6-d2a82d1b8a3f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmyhdl\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mmyhdl_tools\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mvcd\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mImportError\u001b[0m: cannot import name vcd"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -234,17 +223,24 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "NameError",
-       "evalue": "name 'vcd' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-40-fd5841c27cde>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[0mSimulation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraceSignals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfamily_dynamics\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m \u001b[0mvcd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparse_and_plot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'family_dynamics.vcd'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mNameError\u001b[0m: name 'vcd' is not defined"
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "(<matplotlib.figure.Figure at 0x4464e90>,\n",
+        " <matplotlib.axes.AxesSubplot at 0x449f590>)"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAArcAAAD7CAYAAABwmLxJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGOBJREFUeJzt3X9wVfWdxvEnNz8ImAASFCItTUgYa8QCOui0BglVUKYC\nS0ppp0Ibt9rBbhGXKbCrLTAMVQerq0xTHbqihh2VUVhbZVoUNEJ1KFgMP4U14EWQghYJJaYl0WT/\nuD9IIAm5NyTnfM73/ZphuOfmJPlmHg755OQ550oAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nPJDS0R0vu+yypiNHjnTlWgAAAID9kgqTfecOD7eSmpqampL9PPDQokWLtGjRIq+XgSSRn23kZxfZ\n2UZ+dqWkpEiJzagthC7cUuBX4XDY6yWgE8jPNvKzi+xsIz93MdwCAAAgMBhuHVBWVub1EtAJ5Gcb\n+dlFdraRn7vo3AIAAMA36NzivCorK71eAjqB/GwjP7vIzjbycxfDLQAAAAKDWgIAAAB8g1oCAAAA\nEMVw6wB6R7aRn23kZxfZ2UZ+7mK4BQAAQGDQuQUAAIBv0LkFAAAAohhuHUDvyDbys4387CI728jP\nXQy3AAAACAw6twAAAPANOrcAAABAFMOtA+gd2UZ+tpGfXWRnG/m5i+EWAAAAgUHnFgAAAL5B5xYA\nAACIYrh1AL0j28jPNvKzi+xsIz93MdwCAAAgMOjcAgAAwDfo3AIAAABRDLcOoHdkG/nZRn52kZ1t\n5OcuhlsAAAAEBp1bAAAA+AadWwAAACCK4dYB9I5sIz/byM8usrON/NzFcAsAAIDAoHMLAAAA36Bz\nCwAAAEQx3DqA3pFt5Gcb+dlFdraRn7sYbgEAABAYdG4BAADgG3RuAQAAgCiGWwfQO7KN/GwjP7vI\nzjbycxfDLQAAAAKDzi0AAAB8g84tAAAAEJXm9QLQ9TZs2KCSkhKvl4EkVVZWkp9h5GcX2dnWPL9Q\nKBQ7GwgHMNwG3Ny5c/Xwww+LSgkAwFVVVVUaPny418tAN0louC0rK1NeXp4kqW/fvhoxYkT8p6LY\nVYls+2u7vLycwRYA4LStW7fGh1u/fH9m+8x2VVWVampqJEnhcFidxQVlAdbQ0KCMjAxJ0o033qgx\nY8Z4vCIAALrfj3/8Yw0YMMDrZaCDOntBGbWEADt16lT88a233qp77rnHw9UgWfT+bCM/u8jONvJz\nF3dLCLDa2tr44+zsbA9XAgAA0D2oJQTY7t27NWzYMEnSqlWrNG3aNI9XBAAA0D7uc4s2Na8lZGVl\nebgSAACA7sFwG2DNh1tqCXbx+ui2kZ9dZGcb+bmL4TbAGG4BAIBr6NwGWEVFhX74wx9Kkqqrq1VQ\nUODxigAAANpH5xZt4swtAABwDcNtgHFBWTDQG7ON/OwiO9vIz10MtwEWG25TUlLUs2dPj1cDAADQ\n9S7IcBsOhxUKhbRt27YO7V9WVqaJEye2+fann36aX6NfALHhtnfv3rH+CgziFXZsIz+7yM428nNX\nUsNtSUmJZs2aFd8ePHiwjh49quHDh3fo/VNSUhi2ukHsFcr4QQEAALjigpy5DYVCuvTSS5Wamtqh\n/ZuamsSdF7pe7MxtKET7xDJ6Y7aRn11kZxv5uSvhqaesrEwbN25UeXm5QqGQUlNTdfDgwXNqCXv3\n7tWkSZPUt29fZWdn6xvf+IZ27drV6sfcvn27cnNz9Ytf/KLNz/vyyy/rmmuuUc+ePTVkyBD9/Oc/\nV0NDQ6LLd0psuKVvCwAAXJGW6DssW7ZM77//vq644grdf//9klpelS9JR44cUXFxsUaPHq3169er\nX79+2rJli7744ov4PrFawqZNmzR58mQtXLhQs2fPbvVzrlu3TtOnT9eyZct0ww036ODBg5o5c6ZO\nnz6thx56KNEvwRmxXAYNGuTxStAZ9MZsIz+7yM428nNXwsNt7969lZGRoV69eunSSy+VJNXV1bXY\np7y8XNnZ2XrhhReUlhb5FEOGDGmxT1NTk1555RXddtttKi8v1/Tp09v8nL/85S81b968+AsS5Ofn\n68EHH9SMGTMYbtsRG27p3AIAAFd0SRnz3XffVXFxcXywbc1f/vIXlZaWasWKFe0OtrF9lyxZouzs\n7Pif2267TXV1dTp27NiFXn5gxC4o++yzzzxeCTqD3pht5GcX2dlGfu5K+MxtR6SkpLR7wVhKSory\n8/M1YMAArVixQhMnTlRGRkab+zc1NWnRokX6zne+c87b+vfvf0HWHESxM7e9evXyeCUAAADdI6kz\ntxkZGfr888/bfPvIkSP1pz/9qc0LvpqampSTk6P169fro48+0pQpU1RfX9/mx7v66qv13nvvaciQ\nIef86egdGlwUG24vv/xyj1eCzqA3Zhv52UV2tpGfu5IabvPy8rRlyxYdPHhQf/vb39TY2Nji7T/5\nyU9UW1uradOm6Z133lF1dbWee+45bd++Pb5PbMDdsGGDDh8+rNLS0jYH3AULFujZZ5/VwoULtWvX\nLu3du1cvvvii5s+fn8zyndDQ0KDTp09LonMLAADckdRw+7Of/UwZGRkqKirSgAEDzjl7etlll2nj\nxo2qr6/X2LFjdfXVV6u8vFzp6emSWr6IQ05Ojl5//XUdOnRIU6dOjQ+4zV/kYfz48Vq7dq3eeOMN\nXXfddbruuuu0dOlSfeUrX0nqi3ZB8ztY0Eu2jd6YbeRnF9nZRn7uSqpzO3ToUL399tstnjv77G1R\nUZHWrl3b6vs/9dRTLbZzcnJanNUtKytTWVlZi33GjRuncePGJbNcJ8UuJpO4zy0AAHBHIq+B28Sr\nitmxe/duDRs2TJK0atUqTZs2zeMVAQAAnF/0t/eJzKgt8LqsAdW8lpCVleXhSgAAALoPw21ANR9u\nq6urPVwJOovemG3kZxfZ2UZ+7mK4Dajmwy33uQUAAK6gcxtQFRUV8Zcrrq6uVkFBgccrAgAAOD86\nt2hV8zO33OcWAAC4guE2oJoPt9u2bfNwJegsemO2kZ9dZGcb+bmL4TagYsNtKBRSjx49PF4NAABA\n96BzG1CzZ8/WsmXL1KdPH9XU1Hi9HAAAgA6hc4tWxc7c0rcFAAAuYbgNqObDLb0j28jPNvKzi+xs\nIz93MdwGVGy45dXJAACAS+jcBtT111+vt99+W9/85je1YcMGr5cDAADQIXRu0ara2lpJdG4BAIBb\nGG4Dis5tcJCfbeRnF9nZRn7uYrgNKDq3AADARXRuAyozM1OnT5/W3LlztXTpUq+XAwAA0CF0bnGO\nhoYGnT59WhKdWwAA4BaG2wCKXUwm0bkNAvKzjfzsIjvbyM9daYns/Mwzz3TVOnABnThxIv6YM7cA\nAMAlCXVuu2wV6DLPP/+8vvvd73q9DAAAgA7pbOc2oTO3sKV3794aM2aMpDO/nikpKWGbbbbZZptt\nttn2zXZVVZVqamokSeFwWJ2V0JnbAwcOdPoTovvk5uYqMzNTlZWV8X9EsIf8bCM/u8jONvKzq1vP\n3Obn5yf7eQAAAIAux31uAQAA4Bvc5xYAAACIYrh1QKy8DZvIzzbys4vsbCM/dzHcAgAAIDDo3AIA\nAMA36NwCAAAAUQy3DqB3ZBv52UZ+dpGdbeTnLoZbAAAABAadWwAAAPgGnVsAAAAgiuHWAfSObCM/\n28jPLrKzjfzcxXALAACAwKBzCwAAAN+gcwsAAABEMdw6gN6RbeRnG/nZRXa2kZ+7GG4BAAAQGHRu\nAQAA4Bt0bgEAAIAohlsH0DuyjfxsIz+7yM428nMXwy0AAAACg84tAAAAfIPOLQAAABDFcOsAeke2\nkZ9t5GcX2dlGfu5iuAUAAEBg0LkFAACAb9C5BQAAAKIYbh1A78g28rON/OwiO9vIz10MtwAAAAgM\nOrcAAADwDTq3AAAAQBTDrQPoHdlGfraRn11kZxv5uYvhFgAAAIFB5xYAAAC+QecWAAAAiGK4dQC9\nI9vIzzbys4vsbCM/dzHcAgAAIDDo3AIAAMA36NwCAAAAUQy3DqB3ZBv52UZ+dpGdbeTnLoZbAAAA\nBAadW0ds375dixcv1t///nevlwIAQLd64oknVFBQ4PUy0EGd7dymXbilwM8WL16sNWvWeL0MAAC6\nXW1trddLQDdKaLgtKytTXl6eJKlv374aMWKESkpKJJ3ptrDtv+3Kykrt27dPktSnTx9deeWVOnny\nZHxbEts+3o499st62CY/V7Zjz/llPWwnn9/OnTs1fPhwSf76/sx2ZLuqqko1NTWSpHA4rM6iluCA\nyspK3X333dq5c6cmT56sl156yeslIQGVlZXx/wRgD/nZRXa2kZ9dna0lMNw6Ij8/X+FwWNOnT9fK\nlSu9Xg4AAECruM8tOuTUqVOSpOzsbI9XAgAA0HUYbh1QWVnJcGsY92q0jfzsIjvbyM9dDLcOaGho\nUH19vSSGWwAAEGx0bh3w6aefKicnR5L06KOPavbs2R6vCAAAoHV0bnFesUqCJGVlZXm4EgAAgK7F\ncOuA119/Pf6YWoI99MZsIz+7yM428nMXw60D6urq4o8ZbgEAQJDRuXXAa6+9pvHjx0uSNm3apOLi\nYo9XBAAA0Do6tziv5p1bztwCAIAgY7h1wJYtW+KPuaDMHnpjtpGfXWRnG/m5y8xw29jYqMbGRq+X\nYdI//vGP+GPO3AIAgCBLarj94x//qNGjR6tfv37KycnRLbfcor1790qSwuGwQqGQ1qxZo3Hjxumi\niy7SlVdeqfXr17f4GGvXrtXll1+unj17auzYsVq1apVCoZA+/PBDSdLTTz+t7Oxs/eEPf9CwYcOU\nmZmpt956S+np6Tp27FiLj3Xfffdp+PDhyXwpThg4cGD8McOtPSUlJV4vAZ1AfnaRnW3k566khtu6\nujrNmTNHW7du1Ztvvqk+ffpo4sSJamhoiO9z33336Z577tGOHTs0atQofe9739Nnn30mSfrwww9V\nWlqqiRMnaseOHfrpT3+qefPmxQrEcf/85z+1ZMkS/fa3v9WePXs0cuRIFRYWqqKiIr5PY2OjKioq\ndMcddyTzpTgh1rlNTU1VZmamx6sBAADoOkkNt6WlpZoyZYoKCgo0bNgwrVixQh988IG2bt0a32fO\nnDn61re+pYKCAt1///369NNPtX37dknS448/rsLCQv3qV7/S0KFD9e1vf1szZ87U2Xdj+OKLL/Tr\nX/9aX//611VYWKisrCzdcccdeuqpp+L7rFu3Tp988ommT5+ezJfihNhZ9ezs7HN+gID/0Ruzjfzs\nIjvbyM9dSQ23+/fv1/e//30VFhaqT58+GjhwoBobG+OVAkn62te+Fn+cm5srSfr4448lRYatUaNG\ntfiY11577TmfJy0tTSNGjGjx3A9+8AMdOHBAmzdvliStWLFCU6ZM0cUXX5zMl+KE2H1uqSQAAICg\nS0vmnW699VYNHjxYy5cv16BBg5SamqqioiLV19fH90lPT48/jp0tjF0QlpKScs5Z2tb06NHjnDON\nl1xyiSZNmqQnn3xSQ4cO1csvv6xXXnklmS/DGbE7JHCnBJvojdlGfnaRnW3k566Eh9vjx49r3759\neuKJJzRmzBhJ0rZt2/T55593+GN89atf1e9+97sWzzW/XdX53HnnnZo6dary8/OVm5urm266qcPv\n66JY55YztwAAIOgSriVcfPHF6t+/v5YvX67q6mq9+eabmjlzptLSOj4nz5w5U/v379fcuXO1b98+\nrVmzRsuXL1dKSkqHOqHjxo1TTk6OFi9erLKyskS/BOccPnxYEsOtVfTGbCM/u8jONvJzV8LDbSgU\n0qpVq7Rjxw5dddVVmjVrlpYsWaIePXrE9znfgDp48GCtXr1av//97zVixAg99thjWrBggZqamlpc\nzd/exykrK1NDQ4Nuv/32RL8E58Tuc8twCwAAgi6RS+ebOtKTTdZjjz2mRYsW6cSJEx3a/6677tKB\nAwe0bt26LltTUOTn5yscDmvGjBktbqMGAADgN9GTm0nf3impC8ouhPLyco0aNUqXXHKJNm/erCVL\nlnSoYnDy5Ent2bNHK1eu1AsvvND1Cw2AWOeWC8oAAEDQefbyu/v371dpaamKioq0YMEC3XXXXXro\noYfO+36TJ0/WTTfdpB/96EeaMGFCN6zUvpMnT0qilmAVvTHbyM8usrON/Nzl2ZnbRx55RI888kjC\n78c/1sTU19fH72TBcAsAAILON51bdI3jx4+rf//+kqRHH31Us2fP9nhFAAAAbets59azWgK6R21t\nbfwxZ24BAEDQMdwGXOxiMonh1iqqOLaRn11kZxv5uYvhNuCaD7fcLQEAAAQdnduAe/XVV3XzzTdL\nkjZt2qTi4mKPVwQAANA2OrdoF7UEAADgEobbgOOCMvvojdlGfnaRnW3k5y6G24DjzC0AAHAJnduA\ne+CBB3TvvfdKkurq6tSzZ0+PVwQAANA2OrdoV+zMbWpqqjIzMz1eDQAAQNdiuA242HCbnZ0d+0kI\nxtAbs4387CI728jPXQy3Add8uAUAAAg6OrcBN3XqVK1evVpFRUXavXu318sBAABoF51btIsztwAA\nwCUMtwEXG2556V276I3ZRn52kZ1t5OcuhtuA48wtAABwSUKd26NHj3bZQtA1Ro0apUOHDmnGjBmq\nqKjwejkAAADt6mznNi2RnQcOHJjs54HHOHMLAABckNBwC7syMjJUWVmpkpISSWe6SGz7f7t5b8wP\n62Gb/FzZjj3nl/Wwndh27Dm/rIfttrerqqpUU1MjSQqHw+qshGoJv/nNbzr9CdH9jh8/rvnz5ys9\nPd3rpSAJlZWV8f8EYA/52UV2tpGfXZ2tJXCfWwAAAPgG97kFAAAAohhuHdC8fwR7yM828rOL7Gwj\nP3cx3AIAACAw6NwCAADAN+jcAgAAAFEMtw6gd2Qb+dlGfnaRnW3k5y6GWwAAAAQGnVsAAAD4Bp1b\nAAAAIIrh1gH0jmwjP9vIzy6ys4383MVwCwAAgMCgcwsAAADfoHMLAAAARDHcOoDekW3kZxv52UV2\ntpGfuxhuAQAAEBh0bgEAAOAbdG4BAACAKIZbB9A7so38bCM/u8jONvJzF8MtAAAAAoPOLQAAAHyD\nzi0AAAAQxXDrAHpHtpGfbeRnF9nZRn7uYrgFAABAYNC5BQAAgG/QuQUAAACiGG4dQO/INvKzjfzs\nIjvbyM9dDLcAAAAIDDq3AAAA8A06twAAAEAUw60D6B3ZRn62kZ9dZGcb+bmL4RYAAACBQecWAAAA\nvkHnFgAAAIhiuHUAvSPbyM828rOL7GwjP3cx3AIAACAw6NwCAADAN+jcAgAAAFEMtw6gd2Qb+dlG\nfnaRnW3k5y6GWwdUVVV5vQR0AvnZRn52kZ1t5OcuhlsH1NTUeL0EdAL52UZ+dpGdbeTnLoZbAAAA\nBAbDrQPC4bDXS0AnkJ9t5GcX2dlGfu5K5DYL1ZIKumohAAAAgKT9kgq9XgQAAAAAAAAAAAAAAEAS\nbpG0V9L7kuZ7vBZ0TFjSDknvStoSfa6fpNck/Z+kVyX19WRlONsKScck7Wz2XHtZ/acix+JeSeO7\naY1oW2v5LZJ0WJHj711JE5q9jfz848uS3pC0W9IuSXdHn+f4s6Gt/BaJ48/vMiX9WVKVpD2SHog+\n323HXqoiF5LlSUqPLuSKzn5QdLkPFPlH0txSSfOij+dLerBbV4S2jJY0Ui2Ho7ayKlLkGExX5Jis\nFnc88Vpr+S2UNKeVfcnPXwZKGhF9nCVpnyLf3zj+bGgrP44/G3pF/06TtFlSsS7gsXe+YK+NfpCw\npAZJz0uanMDi4Z2z74QxSdIz0cfPSPqX7l0O2rBJ0omznmsrq8mSnlPkWAwrcmxe2/VLRDtay09q\n/U405OcvRxX5hilJtZLekzRIHH9WtJWfxPFnQV307wxFTqSe0AU89s433A6SdKjZ9mGd+ccD/2qS\ntF7SO5LujD43QJFfnyr69wAP1oWOaSuryxQ5BmM4Hv1rlqTtkp7UmV+tkZ9/5SlyBv7P4vizKE+R\n/DZHtzn+/C+kyA8nx3SmXnLBjr3zDbdNCS4W/nC9Igf6BEn/psivTptrEtlacb6syNF/HpeUr8iv\nTP8q6eF29iU/72VJWi1ptqRTZ72N48//siS9qEh+teL4s6JRkYy+JOkGSWPPenunjr3zDbcfKVLa\njvmyWk7P8Ke/Rv/+RNL/KnL6/pgiHSVJypX0sQfrQse0ldXZx+OXos/BXz7Wmf+Y/1tnfn1Gfv6T\nrshgu1LSS9HnOP7siOX3PzqTH8efLSclrZV0jbrx2EtT5FUi8hTpRXBBmf/1kpQdfXyRpLcUubJw\nqc7c7eI/xAVlfpKncy8oay2rWKk+Q5EzE/uV2KsMomvkqWV+uc0e/7ukZ6OPyc9fUiRVSPqvs57n\n+LOhrfw4/vyvv87URXpK2ijpRnXzsTdBkasQqxW5FQP8LV+RfwRVitweJZZZP0V6uNwKzF+ek3RE\nUr0i/fbb1X5W9ypyLO6VdHO3rhStOTu/f1XkG+4ORTp/L6llv538/KNYkV+NVunMbaNuEcefFa3l\nN0EcfxZcJWmbItntkDQ3+jzHHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwIX0\n//TcQUFW6t1HAAAAAElFTkSuQmCC\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0x4464e90>"
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
