--- a/ipython_fixbv/fixbv.ipynb
+++ b/ipython_fixbv/fixbv.ipynb
@@ -282,9 +282,9 @@
         "x4 = Signal(fixbv(156)[ww])\r\n",
         "x5 = Signal(fixbv(156)[ww])\r\n",
         "clk = Signal(bool(0))\r\n",
-        "odd_even = Signal(bool(0)) \r\n",
+        "even_odd = Signal(bool(0)) \r\n",
         "p = Signal(bool(0))           \r\n",
-        "def add_mul(d3,a2,clk,x2,x3,x4,x5,p,odd_even):\r\n",
+        "def add_mul(d3,a2,clk,x2,x3,x4,x5,p,even_odd):\r\n",
         "\r\n",
         "\r\n",
         "\tt = fixbv(0)\r\n",
@@ -293,7 +293,7 @@
         "\tdef rtl():\r\n",
         "\t\tif not p:\r\n",
         "\t\t\r\n",
-        "\t\t\tif odd_even:\r\n",
+        "\t\t\tif even_odd:\r\n",
         "\t\t\t\tca1 = fixbv(-1.586134342,min = -DATA_WIDTH, max= DATA_WIDTH,res=1e-5)\r\n",
         "\t\t\t\t\r\n",
         "\t\t\t\tt = (x2+x3) * ca1\r\n",
@@ -303,7 +303,7 @@
         "\t\t\t\tt1 = (x4+x5) * ca2 \t\t\t\t\t          \r\n",
         "\t\telse:\r\n",
         "\t\t \r\n",
-        "\t\t\tif odd_even:\r\n",
+        "\t\t\tif even_odd:\r\n",
         "\t\t\t\tca3 = fixbv(0.8829110762,min = -DATA_WIDTH, max= DATA_WIDTH,res=1e-5)\r\n",
         "\t\t\t\t\r\n",
         "\t\t\t\t\r\n",
@@ -319,11 +319,11 @@
         "                 \r\n",
         "\treturn rtl\r\n",
         "        \r\n",
-        "d_instance = add_mul(d3,a2,clk,x2,x3,x4,x5,p,odd_even)\r\n",
+        "d_instance = add_mul(d3,a2,clk,x2,x3,x4,x5,p,even_odd)\r\n",
         "\r\n",
         "\r\n",
-        "toVerilog(add_mul,d3,a2,clk,x2,x3,x4,x5,p,odd_even)\r\n",
-        "toVHDL(add_mul,d3,a2,clk,x2,x3,x4,x5,p,odd_even)\r\n"
+        "toVerilog(add_mul,d3,a2,clk,x2,x3,x4,x5,p,even_odd)\r\n",
+        "toVHDL(add_mul,d3,a2,clk,x2,x3,x4,x5,p,even_odd)\r\n"
        ]
       },
       {
@@ -386,7 +386,7 @@
         "    x3,\r\n",
         "    x4,\r\n",
         "    x5,\r\n",
-        "    odd_even\r\n",
+        "    even_odd\r\n",
         ");\r\n",
         "\r\n",
         "\r\n",
@@ -400,7 +400,7 @@
         "input signed [10:0] x3;\r\n",
         "input signed [10:0] x4;\r\n",
         "input signed [10:0] x5;\r\n",
-        "input odd_even;\r\n",
+        "input even_odd;\r\n",
         "\r\n",
         "wire [35:0] ca3;\r\n",
         "wire [35:0] ca2;\r\n",
@@ -418,7 +418,7 @@
         "always @(posedge clk) begin: ADD_MUL_RTL\r\n",
         "    integer t;\r\n",
         "    integer t1;\r\n",
-        "    if ((odd_even == 1)) begin\r\n",
+        "    if ((even_odd == 1)) begin\r\n",
         "        t = ((x2 + x3) * ca1);\r\n",
         "        t1 = ((x4 + x5) * ca2);\r\n",
         "        d3 <= t;\r\n",
@@ -473,7 +473,7 @@
         "        x3: in signed (10 downto 0);\r\n",
         "        x4: in signed (10 downto 0);\r\n",
         "        x5: in signed (10 downto 0);\r\n",
-        "        odd_even: in std_logic\r\n",
+        "        even_odd: in std_logic\r\n",
         "    );\r\n",
         "end entity add_mul;\r\n",
         "\r\n",
@@ -503,7 +503,7 @@
         "    variable t1: integer;\r\n",
         "begin\r\n",
         "    if rising_edge(clk) then\r\n",
-        "        if (odd_even = '1') then\r\n",
+        "        if (even_odd = '1') then\r\n",
         "            t := to_integer((x2 + x3) * ca1);\r\n",
         "            t1 := to_integer((x4 + x5) * ca2);\r\n",
         "            d3 <= to_signed(t, 36);\r\n",
