--- a/ipython_fixbv/fixbv.ipynb
+++ b/ipython_fixbv/fixbv.ipynb
@@ -211,6 +211,24 @@
      "prompt_number": 1
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The simulation above is the main part of the JPEG 2000 process.  The DWT is perform on even and odd samples the signal even_odd determines which pixels (x2 + x3) or (x4 + x5) are mul by the 9/7 DWT \n",
+      "# 9/7 forward Coefficients:\n",
+      "a1 = -1.586134342\n",
+      "a2 = -0.05298011854\n",
+      "a3 = 0.8829110762\n",
+      "a4 = 0.4435068522\n",
+      "# 9/7 inverse Coefficients:\n",
+      "a1 = 1.586134342\n",
+      "a2 = 0.05298011854\n",
+      "a3 = -0.8829110762\n",
+      "a4 = -0.4435068522\n",
+      "The signal p controls which pass the is begin performed.\n"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
