add example of setting items in muliple_add_mul

--- a/ipython_fixbv/multiple_add_mul.ipynb
+++ b/ipython_fixbv/multiple_add_mul.ipynb
@@ -193,10 +193,60 @@
      "prompt_number": 2
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Help on module multiple_add_mul:\n",
+      "\n",
+      "NAME\n",
+      "    multiple_add_mul\n",
+      "\n",
+      "FILE\n",
+      "    /run/media/vidal/ef8bceae-4730-4810-b594-ce6aafd13919/vidal/fedora20_ws009/jpeg-2000-test/ipython_f\n",
+      "ixbv/multiple_add_mul.py\n",
+      "\n",
+      "FUNCTIONS\n",
+      "    top_level(d3, a2, clk, x2, x3, x4, x5, p, even_odd, fwd_inv, n=8)\n",
+      "        Function doc\n",
+      "\n",
+      "DATA\n",
+      "    a2 = Signal(fixbv(0.000000,  format=(24,14,9), ))\n",
+      "    clk = Signal(False)\n",
+      "    d3 = Signal(fixbv(0.000000,  format=(24,14,9), ))\n",
+      "    even_odd = Signal(False)\n",
+      "    fwd_inv = Signal(False)\n",
+      "    mult_inst = [<myhdl._always._Always object>, <myhdl._always._Always ob...\n",
+      "    p = Signal(False)\n",
+      "    toVHDL = <myhdl.conversion._toVHDL._ToVHDLConvertor object>\n",
+      "    toVerilog = <myhdl.conversion._toVerilog._ToVerilogConvertor object>\n",
+      "    traceSignals = <myhdl._traceSignals._TraceSignalsClass object>\n",
+      "    ww = (24, 14)\n",
+      "    x2 = Signal(fixbv(156.000000,  format=(24,14,9), ))\n",
+      "    x3 = Signal(fixbv(164.000000,  format=(24,14,9), ))\n",
+      "    x4 = Signal(fixbv(156.000000,  format=(24,14,9), ))\n",
+      "    x5 = Signal(fixbv(156.000000,  format=(24,14,9), ))"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Below is an example of setting Signals in multiple_add_mul the initial values are 0 for d3 and False for fwd_inv. These are change to d3 210 and True for fwd_inv"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import multiple_add_mul"
+      "from myhdl import *\n",
+      "import multiple_add_mul\n",
+      "ww =(24,14)\n",
+      "print multiple_add_mul.d3\n",
+      "multiple_add_mul.d3 = Signal(fixbv(210)[ww])\n",
+      "print multiple_add_mul.d3\n",
+      "print multiple_add_mul.fwd_inv\n",
+      "multiple_add_mul.fwd_inv = True\n",
+      "print multiple_add_mul.fwd_inv"
      ],
      "language": "python",
      "metadata": {},
@@ -205,11 +255,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "8 <type 'list'>\n"
+        "8 <type 'list'>\n",
+        "0.000000\n",
+        "210.000000\n",
+        "False\n",
+        "True\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
